apps/infrastructure-network/tailscale.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tailscale-subnet-router
  namespace: infrastructure-network
  labels:
    app: tailscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tailscale
  template:
    metadata:
      labels:
        app: tailscale
    spec:
      serviceAccountName: tailscale
      containers:
      - name: tailscale
        image: tailscale/tailscale:latest
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL                    
            add:
              - NET_ADMIN                
              - NET_RAW
        volumeMounts:
        - name: tun-device
          mountPath: /dev/net/tun
      volumes:
      - name: tun-device
        hostPath:
          path: /dev/net/tun
