apps/infrastructure-network/ingress-infrastructure-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infrastructure-ingress
  namespace: infrastructure
  annotations:
    cert-manager.io/cluster-issuer: "my-internal-ca"
spec:
  ingressClassName: cilium
  rules:
  # --- Grafana ---
  - host: grafana.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-grafana
            port:
              number: 80
  # --- Homarr ---
  - host: homarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-homarr
            port:
              number: 7575
