apps/infrastructure-network/ingress-plex-ns.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: plex
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "sonarr.waffle-k8s.local"
    - "radarr.waffle-k8s.local"
    - "plex.waffle-k8s.local"
    - "qbit.waffle-k8s.local"
    - "jackett.waffle-k8s.local"
  rules:
  # --- Sonarr ---
  - host: sonarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-sonarr
            port:
              number: 8989
  # --- Radarr ---
  - host: radarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-radarr
            port:
              number: 7878
  # --- Plex ---
  - host: plex.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-plex
            port:
              number: 32400
  # --- Qbittorrent ---
  - host: qbit.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-qbit
            port:
              number: 8080

  # --- Jackett ---
  - host: jackett.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-jackett
            port:
              number: 9117
