apps/infrastructure-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ingress
  namespace: kube-system
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "hubble.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  # --- hubble ---
  - host: hubble.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infrastructure-ingress
  namespace: infrastructure
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "homarr.waffle-k8s.local"
    - "grafana.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  # --- Grafana ---
  - host: grafana.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-grafana
            port:
              number: 80
  # --- Homarr ---
  - host: homarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-homarr
            port:
              number: 7575

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: plex
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "sonarr.waffle-k8s.local"
    - "radarr.waffle-k8s.local"
    - "plex.waffle-k8s.local"
    - "qbit.waffle-k8s.local"
    - "jackett.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  # --- Sonarr ---
  - host: sonarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-sonarr
            port:
              number: 8989
  # --- Radarr ---
  - host: radarr.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-radarr
            port:
              number: 7878
  # --- Plex ---
  - host: plex.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-plex
            port:
              number: 32400
  # --- Qbittorrent ---
  - host: qbit.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-qbit
            port:
              number: 8080

  # --- Jackett ---
  - host: jackett.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-jackett
            port:
              number: 9117

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: masking-ingress
  namespace: masking
  annotations:
    ingress.cilium.io/force-https: "enabled"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - "addy.waffle-k8s.local"
    secretName: wildcard-tls-secret
  rules:
  - host: addy.waffle-k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: port-service-addy
            port:
              number: 30020
